--- a/src/app/CampeõesResumo/CampeõesResumo.page.html
+++ b/src/app/CampeõesResumo/CampeõesResumo.page.html
@@ -24,7 +24,7 @@
           
            <br>
             
-            <h1>Hitória</h1>
+            <h1>História</h1>
             <h3>
                 Criada para atirar impiedosamente e sobreviver aos duros invernos da fronteira, Tyra juntou-se ao exército do Magistrado ainda muito jovem. Após a desastrosa missão final dos Sentinelas, ela voltou à sua terra natal para levar a vida a caçar os monstros que habitam as bordas do Reino e aterrorizam as pessoas comuns. A sua resistência fora de série e a sua precisão cirúrgica com o rifle caíram como uma luva para a sua nova empreitada: ajudar a Resistência a contra-atacar o Magistrado e pôr um ponto final na guerra que assola o Reino.
 
@@ -34,7 +34,7 @@
           
         </ion-row>
       </ion-grid>
-      <h2>Talentos</h2>
+      <h5>Talentos</h5>
       <ion-card>
           <ion-card-header>
               <ion-img src="\assets\Paladins\Dano\Tyra\Legends\1.png" ionError="Tyra"> </ion-img>
@@ -55,9 +55,8 @@
             <ion-card-content>
               A Marca da Caçadora agora tem duas cargas e beneficia também aliados. Ela tem o intervalo 2s menor e o bônus do dano aumenta em 25%.
             </ion-card-content>
-          </ion-card>
-            <ion-card>
-              
+          </ion-card>  
+           <ion-card>
               <ion-card-header>
                   <ion-img src="\assets\Paladins\Dano\Tyra\Legends\grana.png" ionError="Tyra"> </ion-img>
                 <ion-card-title>MISERICÓRDIA</ion-card-title>
@@ -65,9 +64,80 @@
             
               <ion-card-content>
                   Lança-granadas agora tem 3 cargas.
-              </ion-card-content> 
-              
+              </ion-card-content>
             </ion-card>
-        
+
+                <h4>Habilidades</h4>
+            <ion-slides pager="true">
+              
+                <ion-slide>
+                    <ion-card>
+                        <ion-card-header>
+                            <ion-img src=\assets\Paladins\Dano\Tyra\Legends\Skills\auto-rifle.jpg ionError="Tyra"> </ion-img>
+                          <ion-card-title class="st" > RIFLE DE CAÇA</ion-card-title>
+                        </ion-card-header>
+                      
+                        <ion-card-content>
+                            Dispara a cada 0,09s causando 120 de dano. Efetivo a curta e média distância. Cura Tyra em 15% do dano causado.
+                        </ion-card-content>
+                      </ion-card>
+                </ion-slide>
+            
+                <ion-slide>
+                    <ion-card>
+                        <ion-card-header>
+                            <ion-img src=\assets\Paladins\Dano\Tyra\Legends\Skills\nade-launcher.jpg ionError="LANÇA-GRANADAS"> </ion-img>
+                          <ion-card-title>LANÇA-GRANADAS</ion-card-title>
+                        </ion-card-header>
+                      
+                        <ion-card-content>
+                            Atira uma granada que causa 700 de dano dentro de uma pequena área.
+                        </ion-card-content>
+                      </ion-card>
+                </ion-slide>
+            
+                <ion-slide>
+                    <ion-card>
+                        <ion-card-header>
+                            <ion-img src=\assets\Paladins\Dano\Tyra\Legends\Skills\fire-bomb.jpg ionError="BOMBA"> </ion-img>
+                          <ion-card-title>BOMBA INCENDIÁRIA</ion-card-title>
+                        </ion-card-header>
+                      
+                        <ion-card-content>
+                            Dispara a cada 0,09s causando 120 de dano. Efetivo a curta e média distância. Cura Tyra em 15% do dano causado.
+                        </ion-card-content>
+                      </ion-card>
+                </ion-slide>
+
+                
+                <ion-slide>
+                    <ion-card>
+                        <ion-card-header>
+                            <ion-img src=\assets\Paladins\Dano\Tyra\Legends\Skills\hunters-mark.jpg ionError="MARCA"> </ion-img>
+                          <ion-card-title>MARCA DA CAÇADORA</ion-card-title>
+                        </ion-card-header>
+                      
+                        <ion-card-content>
+                            Marca um inimigo por 6s. Inimigos marcados são revelados e recebem 15% a mais de dano dos seus ataques com arma.
+                        </ion-card-content>
+                      </ion-card>
+                </ion-slide>
+                <ion-slide>
+                    <ion-card>
+                        <ion-card-header>
+                            <ion-img src=\assets\Paladins\Dano\Tyra\Legends\Skills\crossfire.jpg ionError="BOMBA"> </ion-img>
+                          <ion-card-title>FOGO CRUZADO  </ion-card-title>
+                        </ion-card-header>
+                      
+                        <ion-card-content>
+                            Ganha 40% mais velocidade de ataque e 40% mais velocidade de movimento por 4,5s. Os disparos não consomem munição.
+                        </ion-card-content>
+                      </ion-card>
+                </ion-slide>
+
+              </ion-slides>
+
+              
+              
         
 </ion-content>
