--- a/src/app/CampeõesResumo/CampeõesResumo.page.scss
+++ b/src/app/CampeõesResumo/CampeõesResumo.page.scss
@@ -14,4 +14,20 @@ ion-col{
   h3{
     font-size: 12pt;
   }
- 
+
+  h4{
+    margin-left: auto;
+    margin-right: auto;
+    width: 5.3em;
+  }
+  h5{
+    margin-left: auto;
+    margin-right: auto;
+    width: 3.9em;
+  }
+  ion-card-content{
+    height: 140px;
+  }
+  .st{
+    font-style: 20pt;
+  }
