--- a/src/app/Guardião/Guardião.page.html
+++ b/src/app/Guardião/Guardião.page.html
@@ -38,7 +38,7 @@
                     </ion-item>
                     </ion-col>
                     <ion-col align-self-center>
-                      <ion-item routerLink="#" routerDicetion="#">
+                      <ion-item routerLink="/Ymir" routerDicetion="/Ymir">
                           <ion-thumbnail slot = "start">
                           <ion-img src="/assets/smite/Guardião/Ymir.jpg"  ionError="icon"> </ion-img></ion-thumbnail>
                           <h1 >Ymir</h1>
