--- a/src/app/Guerreiro/Guerreiro.page.html
+++ b/src/app/Guerreiro/Guerreiro.page.html
@@ -14,14 +14,14 @@
     <ion-grid>
         <ion-row>
                 <ion-col align-self-center>
-                  <ion-item routerLink="#" routerDicetion="#">
+                  <ion-item routerLink="/Achilles" routerDicetion="/Achilles">
                       <ion-thumbnail slot = "start">
                       <ion-img src="/assets/smite/Guerreiro/Achilles.png"  ionError="icon"> </ion-img></ion-thumbnail>
                       <h1 >Achilles</h1>
                   </ion-item>
                   </ion-col>
                   <ion-col align-self-center>
-                    <ion-item routerLink="#" routerDicetion="#">
+                    <ion-item routerLink="/Bellona" routerDicetion="/Bellona">
                         <ion-thumbnail slot = "start">
                         <ion-img src="/assets/smite/Guerreiro/Bellona.jpg"  ionError="icon"> </ion-img></ion-thumbnail>
                         <h1 >Bellona</h1>
