--- a/src/app/Campeões/Campeões.page.html
+++ b/src/app/Campeões/Campeões.page.html
@@ -8,12 +8,12 @@
           </ion-title>
         </ion-toolbar>
       </ion-header>
-    <ion-content>
+    <ion-content >
       <div class="tt">
-        <h4>  Dano</h4>
+        <h4> Dano</h4>
       </div>
         <ion-grid>
-            <ion-row>
+            <ion-row class="bg">
               <ion-col align-self-center name="Tyra"  id="Tyra">
                 <ion-item routerLink="/Tyra" routerDicetion="Tyra">
                   <ion-thumbnail slot = "start">
