--- a/src/app/CampeõesResumo/CampeõesResumo.page.html
+++ b/src/app/CampeõesResumo/CampeõesResumo.page.html
@@ -14,7 +14,9 @@
           <ion-col align-self-center name="lobo"  id="lobo">
             <ion-item>
               
-                <ion-img src="\assets\Paladins\Dano\Tyra\tyra.png" ionError="tyra"> </ion-img>
+                <ion-img src="\assets\Paladins\Dano\Tyra\tyra.png" ionError="tyra" style="
+                background-color: #0e222b;
+            "> </ion-img>
               
             </ion-item>
             <h2>Tyra</h2>
@@ -35,6 +37,8 @@
         </ion-row>
       </ion-grid>
       <h5>Talentos</h5>
+      <ion-slides pager="true">
+            <ion-slide> 
       <ion-card>
           <ion-card-header>
               <ion-img src="\assets\Paladins\Dano\Tyra\Legends\1.png" ionError="Tyra"> </ion-img>
@@ -46,6 +50,8 @@
           </ion-card-content>
           
         </ion-card>
+    </ion-slide>
+    <ion-slide> 
         <ion-card>
             <ion-card-header>
                 <ion-img src="\assets\Paladins\Dano\Tyra\Legends\marca.png" ionError="Tyra"> </ion-img>
@@ -56,6 +62,8 @@
               A Marca da Caçadora agora tem duas cargas e beneficia também aliados. Ela tem o intervalo 2s menor e o bônus do dano aumenta em 25%.
             </ion-card-content>
           </ion-card>  
+        </ion-slide>
+        <ion-slide> 
            <ion-card>
               <ion-card-header>
                   <ion-img src="\assets\Paladins\Dano\Tyra\Legends\grana.png" ionError="Tyra"> </ion-img>
@@ -66,7 +74,8 @@
                   Lança-granadas agora tem 3 cargas.
               </ion-card-content>
             </ion-card>
-
+        </ion-slide>
+        </ion-slides>
                 <h4>Habilidades</h4>
             <ion-slides pager="true">
               
