--- a/src/app/Campeões/Campeões.page.html
+++ b/src/app/Campeões/Campeões.page.html
@@ -15,7 +15,7 @@
         <ion-grid>
             <ion-row class="bg">
               <ion-col align-self-center name="Tyra"  id="Tyra">
-                <ion-item routerLink="/Tyra" routerDicetion="Tyra">
+                <ion-item routerLink="/tyra" routerDicetion="tyra">
                   <ion-thumbnail slot = "start">
                     <ion-img src="\assets\Paladins\Dano\Tyra\tyra.jpg" ionError="Tyra"> </ion-img></ion-thumbnail>
                     <h1>Tyra</h1>
