--- a/src/app/tyra/tyra.page.html
+++ b/src/app/tyra/tyra.page.html
@@ -16,7 +16,8 @@
 
           <ion-img src="\assets\Paladins\Dano\Tyra\tyra.png" ionError="tyra" style="
                 background-color: #0e222b;
-                width: 108%;
+                width: 106%;
+                border: 2px inset rgb(15,41,50);
 "> </ion-img>
 
        
