--- a/src/app/tyra/tyra.page.scss
+++ b/src/app/tyra/tyra.page.scss
@@ -6,7 +6,8 @@ ion-col{
   
   ion-item{
     --inner-border-width: 0 0 0px 0;
-    width: 100
+    width: 100;
+    border-radius: 5px;
   }
   h1{margin-left: 15px;
   }
@@ -15,10 +16,13 @@ ion-col{
     font-family: Montserrat,sans-serif;
     color: white;
     font-size: 40px;
+    
   }
   h3{
     font-size: 12pt;
-    margin-left: 10px
+    margin-left: 10px;
+    color:white;
+    margin-right: 10px;
   }
 
   h4{
@@ -31,14 +35,16 @@ ion-col{
   h5{margin-left: 10px;
     text-align: left;
     font-family: Montserrat,sans-serif;
-    color: white;
+    color: rgb(253, 180, 44);
+    font-weight: 100;
    
   }
 
-  h6{margin-left: 15px;
+  h6{margin-left: 12px;
     text-align: left;
     font-family: Montserrat,sans-serif;
     color: #547a8c;
+    font-size: 17pt;
   }
   
   .st{
@@ -64,10 +70,16 @@ ion-col{
 ion-slide{
   background-color: #0e222b;
   margin-right: 3px;
-  height: 445px;
+  height: 495px;
+  
 }
 ion-card{
-  height: 415px;
+  
+  width: 100%;
+  height: 100%;
+  max-height: 485px;
+  
+
 }
 ion-card-title{
   margin-top: 15px;
@@ -85,7 +97,10 @@ ion-card-content{
   width: 20px;
   background-color:#00000000;
   color: #547a8c;
+  
 }
 #BD{
-  border: 5px inset black;
+  border: 3px inset rgb(18,37,46);
+ color: white;
+  width: 107%;
 }
