--- a/src/app/Cacador/Cacador.page.html
+++ b/src/app/Cacador/Cacador.page.html
@@ -9,18 +9,18 @@
   </ion-toolbar>
 </ion-header>
 
-<<ion-content>
+<ion-content>
   <ion-grid>
       <ion-row>
               <ion-col align-self-center>
-                <ion-item routerLink="#" routerDicetion="#">
+                <ion-item routerLink="/Apollo" routerDicetion="/Apollo">
                     <ion-thumbnail slot = "start">
                     <ion-img src="/assets/smite/Hunter/Apollo.jpg"  ionError="icon"> </ion-img></ion-thumbnail>
                     <h1 >Apollo</h1>
                 </ion-item>
                 </ion-col>
                 <ion-col align-self-center>
-                  <ion-item routerLink="#" routerDicetion="#">
+                  <ion-item routerLink="/Artemis" routerDicetion="/Artemis">
                       <ion-thumbnail slot = "start">
                       <ion-img src="/assets/smite/Hunter/Artemis.jpg"  ionError="icon"> </ion-img></ion-thumbnail>
                       <h1 >Artemis</h1>
@@ -30,14 +30,14 @@
               
               <ion-row>
                 <ion-col align-self-center>
-                  <ion-item routerLink="#" routerDicetion="#">
+                  <ion-item routerLink="/Izanami" routerDicetion="/Izanami">
                       <ion-thumbnail slot = "start">
                       <ion-img src="/assets/smite/Hunter/Izanami.jpg"  ionError="icon"> </ion-img></ion-thumbnail>
                       <h1 >Izanami</h1>
                   </ion-item>
                   </ion-col>
                   <ion-col align-self-center>
-                    <ion-item routerLink="#" routerDicetion="#">
+                    <ion-item routerLink="/Xbalanque" routerDicetion="/Xbalanque">
                         <ion-thumbnail slot = "start">
                         <ion-img src="/assets/smite/Hunter/Xbalanque.jpg"  ionError="icon"> </ion-img></ion-thumbnail>
                         <h1 >Xbalanque</h1>
