--- a/src/app/Guerreiro/Guerreiro.page.html
+++ b/src/app/Guerreiro/Guerreiro.page.html
@@ -31,14 +31,14 @@
                 
                 <ion-row>
                   <ion-col align-self-center>
-                    <ion-item routerLink="#" routerDicetion="#">
+                    <ion-item routerLink="/ReiArthur" routerDicetion="/ReiArthur">
                         <ion-thumbnail slot = "start">
                         <ion-img src="/assets/smite/Guerreiro/KingArthur.jpg"  ionError="icon"> </ion-img></ion-thumbnail>
                         <h1 >Rei Arthur</h1>
                     </ion-item>
                     </ion-col>
                     <ion-col align-self-center>
-                      <ion-item routerLink="#" routerDicetion="#">
+                      <ion-item routerLink="/Odin" routerDicetion="/Odin">
                           <ion-thumbnail slot = "start">
                           <ion-img src="/assets/smite/Guerreiro/Odin.jpg"  ionError="icon"> </ion-img></ion-thumbnail>
                           <h1 >Odin</h1>
