--- a/src/app/Campeões/Campeões.page.html
+++ b/src/app/Campeões/Campeões.page.html
@@ -24,7 +24,7 @@
                 </ion-col>
                 
                 <ion-col align-self-center>
-                  <ion-item  routerLink="/Drogoz" routerDicetion="Drogoz">
+                  <ion-item  routerLink="/drogoz" routerDicetion="drogoz">
                       <ion-thumbnail slot = "start">
 
                       <ion-img src="\assets\Paladins\Dano\Drogoz\drogoz.jpg" ionError="Drogoz"> </ion-img></ion-thumbnail>
@@ -41,7 +41,7 @@
           <ion-grid>
               <ion-row>
                   <ion-col align-self-center>
-                    <ion-item routerLink="/Cassie" routerDicetion="Cassie" >
+                    <ion-item routerLink="/cassie" routerDicetion="cassie" >
                         <ion-thumbnail slot = "start">
                         <ion-img src="\assets\Paladins\Dano\Cassie\cassie.jpg" ionError="Cassie"> </ion-img></ion-thumbnail>
                         <h1>Cassie</h1>
@@ -50,7 +50,7 @@
                     </ion-col>
 
                     <ion-col align-self-center>
-                      <ion-item routerLink="/Lian" routerDicetion="Lian">
+                      <ion-item routerLink="/lian" routerDicetion="lian">
                           <ion-thumbnail slot = "start">
                           <ion-img src="\assets\Paladins\Dano\Lian\lian.jpg" ionError="Lian"> </ion-img></ion-thumbnail>
                           <h1>Lian</h1>
