--- a/src/app/Chronos/Chronos.page.scss
+++ b/src/app/Chronos/Chronos.page.scss
@@ -16,3 +16,11 @@ h5{
   margin-left: 15px;
 }
 
+p{
+  text-align: justify;
+  font-size: 12pt;
+  margin-left: 5px;
+  color:black;
+  margin-right: 10px;  
+}
+
