--- a/src/app/Hades/Hades.page.scss
+++ b/src/app/Hades/Hades.page.scss
@@ -15,3 +15,10 @@ h5{
 #pl{
   margin-left: 15px;
 }
+p{
+  text-align: justify;
+  font-size: 12pt;
+  margin-left: 5px;
+  color:black;
+  margin-right: 10px;  
+}
